welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:3: error: expected start of definition
override growFlowers(){fleur(Color.CYAN)} 
         ^